# Task-M

./: README.md
Backend/: Cargo.toml
Backend/src/: main.rs
Backend/todo-app/: README.md
Backend/todo-app/backend/: README.md
Backend/todo-app/backend/src/: main.rs
Backend/todo-app/frontend/: README.md  package.json
Backend/todo-app/frontend/src/: App.tsx
Backend/todo-app/frontend/src/components/: Task.tsx  TaskForm.tsx  TaskList.tsx
Backend/todo-app/frontend/src/services/: api.ts
Backend/todo-app/frontend/src/types/: index.ts
todo-app/: .gitignore
todo-frontend/: package-lock.json  package.json
todo-frontend/src/: App.css
todo-frontend/src/components/: TodoList.css  TodoList.js
