[package]
name = "CLIs-Application"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
actix-web = "4"
uuid = { version = "1.13.2" , features = ["v4", "macro-diagnostics",  "fast-rng", "macro-diagnostics",] }
aws-config = "1.5.16"
aws-sdk-dynamodb = "1.65.0"
env_logger = "0.11.6"
log = "0.4.25"
strum = { version = "0.27", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }




